Finishing off storage layer, all seems to be working.

--- a/src/Dfe.CdcFileAdapter.FunctionApp/Dfe.CdcFileAdapter.FunctionApp.csproj
+++ b/src/Dfe.CdcFileAdapter.FunctionApp/Dfe.CdcFileAdapter.FunctionApp.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Dfe.CdcFileAdapter.Application\Dfe.CdcFileAdapter.Application.csproj" />
+    <ProjectReference Include="..\Dfe.CdcFileAdapter.Infrastructure.AzureStorage\Dfe.CdcFileAdapter.Infrastructure.AzureStorage.csproj" />
   </ItemGroup>
   
   <ItemGroup>
